kubernetes/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall        
  namespace: heimdall 
  labels:
    app: heimdall       
spec:
  replicas: 1         
  selector:
    matchLabels:
      app: heimdall
  strategy:
    rollingUpdate:
      maxSurge: 0     
      maxUnavailable: 1 
    type: RollingUpdate 
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: heimdall  
        persistentVolumeClaim:
          claimName: heimdall
      containers:
      - image: ghcr.io/linuxserver/heimdall 
        name: heimdall                      
        imagePullPolicy: Always           
        ports:                              
         - containerPort: 443
           name: https
           protocol: TCP
        volumeMounts:             
         - mountPath: /config               
           name: heimdall
           subPath: config
