kubernetes/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall       
spec:
  selector:
    app: heimdall           
  ports:
    - name: https
      protocol: TCP
      port: 443
