kubernetes/heimdall/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall
  namespace: heimdall
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.local.syspawn.com`)
      kind: Rule
      services:
        - name: nginx
          port: 443
  tls:
    secretName: local-syspawn-com-tls
